--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,75 @@
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: lightgrey;
+}
+
+#index {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  grid-template-rows: auto auto auto;
+  grid-template-areas:
+  ". logo userArea"
+  "filters results claimedList"
+  "footer footer footer";
+}
+
+.TopRight {
+  background-color: saddlebrown;
+  grid-area: userArea;
+  height: 40px;
+}
+
+.GALogo {
+  grid-area: logo;
+}
+
+#Categories {
+  background-color: gray;
+  border: 1px black solid;
+  grid-area: filters;
+  /*grid-area: ls;*/
+  /*display: flex;
+  align-items: center;*/
+  /*text-align: left
+  display: grid;
+
+  grid-template-columns: auto;
+  grid-auto-rows: auto auto auto;
+  grid-template-areas:
+  "h" "h" "h"
+  "s" "m" "s"
+  "f" "f" "f";
+  justify-content: center;*/
+}
+
+#ResultsList {
+  /*align-items: center;*/
+  background-color: darkgray;
+  border: 1px black solid;
+  grid-area: results;
+  /*display: flex;
+  */
+}
+
+#ClaimedList {
+  background-color: grey;
+  border: 1px black solid;
+  grid-area: claimedList;
+}
+
+.footer {
+  margin-top: 10px;
+  background-color: chartreuse;
+  grid-area: footer;
+  text-align: center;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  monospace;
 }
